# corpuswright

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  force-ocr-stage1-wip.patch  package-lock.json
.github/workflows/: ci.yml  legacy.yml  release.yml
apps/desktop/: index.html  package-lock.json  package.json
apps/desktop/src/: config.ts  (+14 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
crates/corpuswright-core/: Cargo.toml  README.md
crates/corpuswright-core/bindings/: ArtifactRiskLabel.ts  CandidateContentClass.ts  CleaningConfig.ts  CombinedPreview.ts  CorpusSummary.ts  DocumentType.ts  DocumentTypeCounts.ts  ExportManifest.ts  ExportReport.ts  ExportWarning.ts  ExportWarningKind.ts  PdfAuditQuality.ts  PdfAuditResult.ts  PdfAuditSuggestedProfile.ts  PdfEmbeddedTextStrategy.ts  PdfOcrQuality.ts  PdfPageExtractionMethod.ts  PdfPageRangePage.ts  PdfPageRangeResult.ts  PreviewWarningKind.ts  RepeatedArtifactCandidate.ts  RepeatedArtifactExample.ts  RepeatedArtifactKind.ts  RepeatedArtifactScanDiagnostics.ts  ReplacementRule.ts  ScanReport.ts  SearchResult.ts  TableExtractionStrategy.ts
crates/corpuswright-core/examples/: export_corpus.rs  export_ts.rs  pdf_bench.rs  pdf_diagnostic.rs  scan_preview.rs  scratch_pdfium.rs
crates/corpuswright-core/src/: cache.rs  clean.rs  docx.rs  export.rs  html.rs  lib.rs  manifest.rs  pdf.rs  pdf_audit.rs  pdf_ocr.rs  pdf_quality.rs  preview.rs  repeated_artifacts.rs  scan.rs  search.rs  word_count.rs
crates/corpuswright-core/tests/: integration_tests.rs
crates/corpuswright-core/tests/fixtures/: clean.txt  dirty.txt
crates/corpuswright-core/tests/fixtures/docx/: basic.docx  formatting.docx  tables.docx  tables_empty_cells.docx  tables_large_10.docx  tables_merged_cells.docx  tables_multiple.docx  tables_nested.docx  tables_with_unsupported.docx
crates/corpuswright-core/tests/fixtures/html/: entities.html  fragment.htm  html_like_text.txt  malformed.html  script_style.html  simple.html
docs/: ingestion.md  pdf-extraction-strategy.md  repeated-artifact-finder.md  supported-formats.md  testing.md
(+18 files in other folders)
