[workspace]
members = ["crates/corpusaid-core", "apps/desktop/src-tauri"]
exclude = ["legacy/pyside/rust_preview"]
resolver = "2"

[workspace.package]
edition = "2024"
authors = ["Jhonatan Lopes <jhlopesalves@gmail.com>"]
repository = "https://github.com/jhlopesalves/CorpusWright"
rust-version = "1.85"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.12.0"
