[package]
name = "corpuswright-desktop"
version = "0.1.0"
description = "CorpusWright — corpus preprocessing and cleaning desktop app"
authors = { workspace = true }
edition = { workspace = true }

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
corpuswright-core = { path = "../../../crates/corpuswright-core" }
tauri-plugin-dialog = "2.7.1"
rayon = { workspace = true }
